--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -2,3 +2,8 @@
 .wy-side-nav-search, .wy-nav-top {
     background: rgb(0, 164, 153);
 }
+
+/* override table no-wrap */
+.wy-table-responsive table td, .wy-table-responsive table th {
+    white-space: normal;
+}
